# mip_sdk

./: CMakeLists.txt
src/mip/definitions/: descriptors.h
src/mip/utils/: serial_port.c  serialization.h
